Fix .image-pull-right overlap with paragraph text

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -18,7 +18,11 @@
 	float: left;
 }
 .pull-right {
-	float:right;
+	float: right;
+}
+.image-pull-right {
+	float: right;
+	margin-top: 0;
 }
 .clearfix {
 	*zoom: 1;
